--- a/www/index.html
+++ b/www/index.html
@@ -20,9 +20,13 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="app.js"></script>
+    
+    <script src="home/home-controller.js"></script>
+    <script src="search/search-controller.js"></script>
+    <script src="home/flix/flix-controller.js"></script>
+    <script src="settings/settings-controller.js"></script>
+    <script src="services/services.js"></script>
   </head>
   <body ng-app="starter">
     <!--
